--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.3.2",
-    "@tanstack/router-devtools": "^1.3.2",
-    "autoprefixer": "^10.4.16",
-    "axios": "^1.6.5",
-    "postcss": "^8.4.33",
+    "@tanstack/react-router": "1.3.2",
+    "@tanstack/router-devtools": "1.3.2",
+    "autoprefixer": "10.4.16",
+    "axios": "1.6.5",
+    "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "3.4.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.1",
