--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "bunx @biomejs/biome format --write ./src",
+    "lint": "bun biome lint . --apply-unsafe",
     "preview": "vite preview"
   },
   "dependencies": {
