--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-slot": "1.0.2",
     "@tanstack/react-query": "5.17.10",
     "@tanstack/react-router": "1.3.2",
     "@tanstack/router-devtools": "1.3.2",
