remove instruction to update minor version

--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "@vitejs/plugin-react-swc": "3.5.0",
     "typescript": "5.2.2",
     "vite": "5.0.8",
-    "husky": "^8.0.0"
+    "husky": "8.0.0"
   }
 }
