--- a/package.json
+++ b/package.json
@@ -32,18 +32,20 @@
     "tailwind-merge": "2.2.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
-    "zod": "3.22.4"
+    "zod": "3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.11.0",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
     "@typescript-eslint/eslint-plugin": "6.14.0",
     "@typescript-eslint/parser": "6.14.0",
     "@vitejs/plugin-react-swc": "3.5.0",
+    "husky": "8.0.0",
     "typescript": "5.2.2",
-    "vite": "5.0.8",
-    "husky": "8.0.0"
+    "vite": "5.0.8"
   }
 }
