--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@heroicons/react": "2.1.1",
     "@hookform/resolvers": "3.3.4",
     "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slot": "1.0.2",
     "@tanstack/react-query": "5.17.12",
     "@tanstack/react-router": "1.3.2",
@@ -29,6 +31,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.49.3",
+    "react-spinners": "0.13.8",
+    "sonner": "1.3.1",
     "tailwind-merge": "2.2.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
@@ -37,6 +41,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.1",
+    "@tanstack/react-query-devtools": "5.17.15",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "20.11.0",
     "@types/react": "18.2.43",
