--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "lucide-react": "0.309.0",
+    "next-themes": "0.2.1",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
