--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.22.4",
-    "zustand": "^4.4.7"
+    "zustand": "4.4.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.1",
