--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cmdk": "0.2.0",
+    "date-fns": "3.2.0",
     "lucide-react": "0.309.0",
     "next-themes": "0.2.1",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "react-day-picker": "8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.49.3",
     "react-spinners": "0.13.8",
