--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "2.1.0",
     "cmdk": "0.2.0",
     "date-fns": "3.2.0",
+    "dropzone": "6.0.0-beta.2",
     "lucide-react": "0.309.0",
     "next-themes": "0.2.1",
     "postcss": "8.4.33",
@@ -42,12 +43,14 @@
     "tailwind-merge": "2.2.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
+    "xlsx": "0.18.5",
     "zod": "3.22.4",
     "zustand": "4.4.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.1",
     "@tanstack/react-query-devtools": "5.17.15",
+    "@types/dropzone": "5.7.8",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "20.11.0",
     "@types/react": "18.2.43",
