--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@radix-ui/react-slot": "1.0.2",
     "@tanstack/react-query": "5.17.12",
     "@tanstack/react-router": "1.3.2",
+    "@tanstack/react-table": "^8.11.6",
     "@tanstack/router-devtools": "1.3.2",
+    "@types/react-tooltip": "4.2.4",
     "autoprefixer": "10.4.16",
     "axios": "1.6.5",
     "class-variance-authority": "0.7.0",
@@ -38,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.49.3",
     "react-spinners": "0.13.8",
+    "react-tooltip": "5.25.2",
     "sonner": "1.3.1",
     "tailwind-merge": "2.2.0",
     "tailwindcss": "3.4.1",
