--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+#cypress screenshots
+cypress/screenshots
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
