--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-table": "8.11.6",
     "@tanstack/router-devtools": "1.3.2",
     "@types/react-tooltip": "4.2.4",
+    "@uidotdev/usehooks": "2.4.1",
     "autoprefixer": "10.4.16",
     "axios": "1.6.5",
     "class-variance-authority": "0.7.0",
@@ -38,6 +39,7 @@
     "cmdk": "0.2.0",
     "date-fns": "3.2.0",
     "dropzone": "6.0.0-beta.2",
+    "lodash": "4.17.21",
     "lucide-react": "0.309.0",
     "next-themes": "0.2.1",
     "postcss": "8.4.33",
@@ -59,6 +61,7 @@
     "@biomejs/biome": "1.5.1",
     "@tanstack/react-query-devtools": "5.17.15",
     "@types/dropzone": "5.7.8",
+    "@types/lodash": "4.14.202",
     "@types/node": "20.11.0",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
