--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "format": "bunx @biomejs/biome format --write ./src",
+    "check": "bunx @biomejs/biome check --apply .",
     "lint": "bun biome lint . --apply-unsafe",
     "preview": "vite preview",
     "prepare": "husky install",
