--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-tabs": "1.0.4",
+    "@react-pdf/renderer": "3.3.4",
     "@tanstack/react-query": "5.17.12",
     "@tanstack/react-router": "1.3.2",
     "@tanstack/react-table": "8.11.6",
