--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,4 @@
-server { 
+server {
  listen 80;
  server_name frontend;
 
@@ -7,12 +7,12 @@ server {
    root /usr/share/nginx/html;
    try_files $uri /index.html;
  }
- 
+
 location /v1 {
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-NginX-Proxy true;
-   proxy_pass http://ip1-api-app-1:3333/v1;
+   proxy_pass http://carva-server-backend-1:3333/v1;
    proxy_ssl_session_reuse off;
    proxy_set_header Host $http_host;
    proxy_cache_bypass $http_upgrade;
