--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "tailwind-merge": "2.2.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
+    "vite": "5.0.8",
     "xlsx": "0.18.5",
     "zod": "3.22.4",
-    "zustand": "4.4.7",
-    "vite": "5.0.8"
+    "zustand": "4.4.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.1",
