--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -32,7 +32,7 @@ jobs:
           context: .
           file: ./Dockerfile
           build-args: 
-            host_ip=${{ env.HOST_IP }}
+            host_ip=PROD_API_URL
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
