--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,7 +12,7 @@ location /v1 {
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-NginX-Proxy true;
-   proxy_pass http://carva-server-backend-1:3333/v1;
+   proxy_pass http://carva-prod-backend-1:3333/v1;
    proxy_ssl_session_reuse off;
    proxy_set_header Host $http_host;
    proxy_cache_bypass $http_upgrade;
